[tool.poetry]
name = "ncdmv-reservation"
version = "0.1.3"
description = ""
authors = ["Teddy Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/tddschn/ncdmv-reservation"
repository = "https://github.com/tddschn/ncdmv-reservation"
classifiers = ["Topic :: Utilities"]
keywords = ["ncdmv"]
packages = [{ include = "ncdmv_reservation" }]


[tool.poetry.scripts]
ncdmv-driver-license-office-availability = "ncdmv_reservation.cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/ncdmv-reservation/issues"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.4"
selenium = "^4.16.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
